Bug 1243858 - Disallow unary expression on left-hand side of exponentiation operator. r=arai